--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,10 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 40px;
+  width: auto;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .App-header {
