--- a/src/filter/filter.css
+++ b/src/filter/filter.css
@@ -1,9 +1,11 @@
 .filter {
   min-height: 450px;
-  width: 100%;
   padding: 80px 24px;
   background: url("../img/filter-bg.jpg") no-repeat center;
   background-size: cover;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  flex-wrap: wrap; }
+  .filter div {
+    margin: 15px; }
