--- a/src/filter/filter.scss
+++ b/src/filter/filter.scss
@@ -1,10 +1,14 @@
 .filter {
   min-height: 450px;
-  width: 100%;
   padding: 80px 24px;
   background: url("../img/filter-bg.jpg") no-repeat center;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
+  div {
+    margin: 15px;
+  }
+;
 }
