--- a/src/container.css
+++ b/src/container.css
@@ -9,7 +9,8 @@
   height: 400px;
   width: 280px;
   margin: 12px;
-  position: relative; }
+  position: relative;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
   .hotel__block img {
     position: absolute;
     left: 0;
@@ -50,10 +51,10 @@
       width: 100%;
       height: 100%;
       background: rgba(0, 0, 0, 0.3);
-      transform: scale3d(2.3, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
-      transition: all 0.5s ease-out; }
+      transform: scale3d(2.8, 1.8, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
+      transition: all 1s ease-out; }
     .hotel__block .hotel-content:hover:before {
-      transform: scale3d(2.3, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, 100%, 0); }
+      transform: scale3d(2.8, 1.8, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, 100%, 0); }
     .hotel__block .hotel-content__title {
       font-size: 16px;
       font-weight: 400;
