--- a/src/filter/filter.scss
+++ b/src/filter/filter.scss
@@ -1,5 +1,5 @@
 .filter {
-  min-height: 450px;
+  height: 450px;
   padding: 80px 24px;
   position: relative;
   overflow: hidden;
@@ -29,7 +29,7 @@
       border-radius: 2px;
       padding: 10px 35px;
       min-width: 180px;
-      background: rgba(0,0,0,0.6);
+      background: rgba(0,0,0,0.4);
       color: #fff;
       text-transform: uppercase;
       margin-top: 35px;
@@ -39,6 +39,53 @@
         cursor: pointer;
       }
     }
+  }
+  .date-picker-select {
+    background: rgba(0, 0, 0, 0.4);
+    padding: 9px 5px;
+    border: none;
+    margin-top: 34px;
+    border-radius: 2px;
+    outline: none;
+  }
+  .date-picker-label {
+    label {
+      font-size: 16px;
+      top: auto;
+      bottom: 40px;
+      transform: none !important;
+    }
+  }
+  .react-datepicker {
+    background: rgba(0,0,0,0.2);
+    border: 1px solid rgba(0,0,0,0.7);
+    &__header {
+      background: rgba(0,0,0,0.3);
+      border-bottom: 1px solid rgba(0,0,0,0.7);
+    }
+    &__navigation--previous {
+      border-right-color: #000;
+    }
+    &__navigation--next {
+      border-left-color: #000;
+    }
+    &__day {
+      &:hover {
+        background: rgba(0,0,0,0.3) !important;
+        color: #bd5e3b;
+      }
+      &--selected {
+        background: rgba(0, 0, 0, 0.7);
+        color: #A55031;
+      }
+    }
+  }
+  .react-datepicker-popper[data-placement^="bottom"]
+  .react-datepicker__triangle,
+  .react-datepicker-popper[data-placement^="bottom"]
+  .react-datepicker__triangle::before {
+    border-top: none;
+    border-bottom-color: rgba(0,0,0,0.7);
   }
 
   .cb-slideshow {
@@ -136,4 +183,8 @@
     animation-timing-function: linear;
   }
 
+}
+
+.MuiPaper-root-9 {
+  background: rgba(0,0,0,0.9);
 }
