--- a/src/header/headers.scss
+++ b/src/header/headers.scss
@@ -9,6 +9,13 @@
   header {
     background: rgba(0,0,0,0.5);
   }
+  .logo-link {
+    color: white;
+    text-decoration: none;
+    &:hover {
+      opacity: 0.7;
+    }
+  }
   &__logo {
     font-size: 24px;
     color: white;
