--- a/src/listhotel/listhotel.css
+++ b/src/listhotel/listhotel.css
@@ -99,3 +99,7 @@
     z-index: 0;
     list-style-type: none;
     background: rgba(142, 47, 47, 0.4); }
+
+.about-hotel__container {
+  max-width: 1200px;
+  padding: 40px 24px; }
