--- a/src/listhotel/listhotel.scss
+++ b/src/listhotel/listhotel.scss
@@ -123,3 +123,11 @@
     padding: 40px 24px;
   }
 }
+
+//map
+.google-icons {
+  width: 50px;
+  height: 75px;
+  background: url('../img/location-icon.png') no-repeat center;
+  background-size: cover;
+}
