--- a/src/listhotel/listhotel.css
+++ b/src/listhotel/listhotel.css
@@ -102,7 +102,13 @@
 
 .about-hotel__container {
   max-width: 1200px;
+  margin: 0 auto;
   padding: 40px 24px; }
+
+.about-hotel__map {
+  width: 100%;
+  height: 400px;
+  margin-top: 40px; }
 
 .google-icons {
   width: 50px;
