--- a/src/listhotel/listhotel.scss
+++ b/src/listhotel/listhotel.scss
@@ -120,7 +120,13 @@
   }
   &__container {
     max-width: 1200px;
+    margin: 0 auto;
     padding: 40px 24px;
+  }
+  &__map {
+    width: 100%;
+    height: 400px;
+    margin-top: 40px;
   }
 }
 
