--- a/src/filter/filter.css
+++ b/src/filter/filter.css
@@ -1,8 +1,7 @@
 .filter {
-  height: 450px;
+  height: 500px;
   padding: 80px 24px;
   position: relative;
-  overflow: hidden;
   background: transparent url(../img/filter-bg0.jpg) repeat top left;
   background-size: cover;
   display: flex;
@@ -76,7 +75,8 @@
     top: 0;
     left: 0;
     z-index: 0;
-    list-style-type: none; }
+    list-style-type: none;
+    overflow: hidden; }
     .filter .cb-slideshow:after {
       content: '';
       position: absolute;
