--- a/src/listhotel/listhotel.css
+++ b/src/listhotel/listhotel.css
@@ -41,6 +41,7 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
+    padding: 15px;
     color: white;
     text-decoration: none;
     z-index: 2; }
@@ -104,6 +105,30 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 40px 24px; }
+  .about-hotel__container .main-title {
+    text-align: center;
+    font-size: 28px;
+    padding-bottom: 40px; }
+  .about-hotel__container .hotel-info {
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
+    flex-wrap: wrap; }
+    .about-hotel__container .hotel-info__img {
+      width: 50%; }
+      .about-hotel__container .hotel-info__img img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
+    .about-hotel__container .hotel-info__content {
+      width: 50%;
+      padding-left: 40px; }
+      .about-hotel__container .hotel-info__content .title {
+        margin-top: 0; }
+      .about-hotel__container .hotel-info__content ul {
+        list-style-type: none;
+        padding-left: 0; }
 
 .about-hotel__map {
   width: 100%;
