--- a/src/listhotel/listhotel.scss
+++ b/src/listhotel/listhotel.scss
@@ -44,6 +44,7 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
+    padding: 15px;
     color: white;
     text-decoration: none;
     z-index: 2;
@@ -122,6 +123,37 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 40px 24px;
+    .main-title {
+      text-align: center;
+      font-size: 28px;
+      padding-bottom: 40px;
+    }
+    .hotel-info {
+      display: flex;
+      align-items: stretch;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+      &__img {
+        width: 50%;
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      &__content {
+        width: 50%;
+        padding-left: 40px;
+        .title {
+          margin-top: 0;
+        }
+        ul {
+          list-style-type: none;
+          padding-left: 0;
+        }
+      }
+    }
   }
   &__map {
     width: 100%;
