--- a/src/listhotel/listhotel.css
+++ b/src/listhotel/listhotel.css
@@ -131,9 +131,35 @@
         padding-left: 0; }
 
 .about-hotel__map {
+  position: relative;
   width: 100%;
   height: 400px;
   margin-top: 40px; }
+  .about-hotel__map .contact-block {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    left: auto;
+    width: 320px;
+    padding: 15px;
+    color: white;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 2; }
+    .about-hotel__map .contact-block .title {
+      font-size: 18px;
+      text-transform: uppercase;
+      font-weight: 300;
+      margin: 0; }
+    .about-hotel__map .contact-block ul {
+      list-style-type: none; }
+      .about-hotel__map .contact-block ul li {
+        padding: 5px 0;
+        display: inline-block; }
 
 .google-icons {
   width: 50px;
