--- a/src/listhotel/listhotel.scss
+++ b/src/listhotel/listhotel.scss
@@ -156,9 +156,39 @@
     }
   }
   &__map {
+    position: relative;
     width: 100%;
     height: 400px;
     margin-top: 40px;
+    .contact-block {
+      position: absolute;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      left: auto;
+      width: 320px;
+      padding: 15px;
+      color: white;
+      background: rgba(0,0,0,0.7);
+      z-index: 2;
+      .title {
+        font-size: 18px;
+        text-transform: uppercase;
+        font-weight: 300;
+        margin: 0;
+      }
+      ul {
+        list-style-type: none;
+        li {
+          padding: 5px 0;
+          display: inline-block;
+        }
+      }
+    }
   }
 }
 
