--- a/src/filter/filter.scss
+++ b/src/filter/filter.scss
@@ -20,15 +20,15 @@
       font-size: 18px;
     }
     .filter-select {
-      min-width: 200px;
+      min-width: 160px;
       font-size: 18px;
     }
     .filter-btn {
       display: inline-block;
       border: none;
       border-radius: 2px;
-      padding: 10px 35px;
-      min-width: 180px;
+      padding: 10px 25px;
+      min-width: 160px;
       background: rgba(0,0,0,0.4);
       color: #fff;
       text-transform: uppercase;
@@ -42,6 +42,7 @@
   }
   .date-picker-select {
     background: rgba(0, 0, 0, 0.4);
+    width: 100%;
     padding: 9px 5px;
     border: none;
     margin-top: 34px;
@@ -49,6 +50,7 @@
     outline: none;
   }
   .date-picker-label {
+    max-width: 160px;
     label {
       font-size: 16px;
       top: auto;
@@ -59,6 +61,12 @@
   .react-datepicker {
     background: rgba(0,0,0,0.2);
     border: 1px solid rgba(0,0,0,0.7);
+    &-wrapper {
+      width: 100%;
+    }
+    &__input-container {
+      width: 160px;
+    }
     &__header {
       background: rgba(0,0,0,0.3);
       border-bottom: 1px solid rgba(0,0,0,0.7);
