--- a/src/Components/Listhotel/listhotel.scss
+++ b/src/Components/Listhotel/listhotel.scss
@@ -105,7 +105,7 @@
     width: 100%;
     height: 300px;
     position: relative;
-    background: url(../img/about-hotel.jpg) no-repeat center;
+    background: url(../../img/about-hotel.jpg) no-repeat center;
     background-size: cover;
     &:after {
       content: '';
@@ -203,6 +203,6 @@
 .google-icons {
   width: 50px;
   height: 75px;
-  background: url('../img/location-icon.png') no-repeat center;
+  background: url('../../img/location-icon.png') no-repeat center;
   background-size: cover;
 }
