--- a/src/Components/Listhotel/listhotel.css
+++ b/src/Components/Listhotel/listhotel.css
@@ -1,4 +1,6 @@
 .content {
+  max-width: 1240px;
+  margin: 0 auto;
   padding: 50px 12px;
   display: flex;
   align-items: center;
@@ -45,6 +47,18 @@
     color: white;
     text-decoration: none;
     z-index: 2; }
+    .hotel__block .hotel-content:after {
+      content: '';
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      background-image: url(../../img/default-img-hotel.png);
+      background-size: contain;
+      opacity: 0.2;
+      width: 100%;
+      height: 100%;
+      z-index: -1; }
     .hotel__block .hotel-content:before {
       content: '';
       position: absolute;
@@ -108,14 +122,34 @@
   .about-hotel__container .main-title {
     text-align: center;
     font-size: 28px;
-    padding-bottom: 40px; }
+    padding-bottom: 40px;
+    font-weight: 300; }
+  .about-hotel__container h3 {
+    font-weight: 300; }
   .about-hotel__container .hotel-info {
     display: flex;
     align-items: stretch;
     justify-content: flex-start;
     flex-wrap: wrap; }
     .about-hotel__container .hotel-info__img {
-      width: 50%; }
+      width: 50%;
+      position: relative; }
+      .about-hotel__container .hotel-info__img:after {
+        content: "Photo is missing";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: url(../../img/default-hotel.jpg) no-repeat center;
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-transform: uppercase;
+        font-size: 20px;
+        color: #fff;
+        opacity: 0.25; }
       .about-hotel__container .hotel-info__img img {
         display: block;
         width: 100%;
@@ -125,7 +159,8 @@
       width: 50%;
       padding-left: 40px; }
       .about-hotel__container .hotel-info__content .title {
-        margin-top: 0; }
+        margin-top: 0;
+        font-weight: 300; }
         .about-hotel__container .hotel-info__content .title.title-price {
           color: #8e2f2f;
           font-size: 20px; }
