--- a/src/Components/Listhotel/listhotel.scss
+++ b/src/Components/Listhotel/listhotel.scss
@@ -1,4 +1,6 @@
 .content {
+  max-width: 1240px;
+  margin: 0 auto;
   padding: 50px 12px;
   display: flex;
   align-items: center;
@@ -48,6 +50,19 @@
     color: white;
     text-decoration: none;
     z-index: 2;
+    &:after {
+      content: '';
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      background-image: url(../../img/default-img-hotel.png);
+      background-size: contain;
+      opacity: 0.2;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
     &:before {
       content: '';
       position: absolute;
@@ -127,6 +142,10 @@
       text-align: center;
       font-size: 28px;
       padding-bottom: 40px;
+      font-weight: 300;
+    }
+    h3 {
+      font-weight: 300;
     }
     .hotel-info {
       display: flex;
@@ -135,6 +154,24 @@
       flex-wrap: wrap;
       &__img {
         width: 50%;
+        position: relative;
+        &:after {
+          content: "Photo is missing";
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          background: url(../../img/default-hotel.jpg) no-repeat center;
+          background-size: cover;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          text-transform: uppercase;
+          font-size: 20px;
+          color: #fff;
+          opacity: 0.25;
+        }
         img {
           display: block;
           width: 100%;
@@ -147,6 +184,7 @@
         padding-left: 40px;
         .title {
           margin-top: 0;
+          font-weight: 300;
           &.title-price {
             color: rgba(142, 47, 47, 1);
             font-size: 20px;
