--- a/src/Components/Filter/filter.scss
+++ b/src/Components/Filter/filter.scss
@@ -23,6 +23,9 @@
       min-width: 160px;
       font-size: 18px;
     }
+    .filter-input {
+      max-width: 160px;
+    }
     .filter-btn {
       display: inline-block;
       border: none;
