--- a/src/Components/Header/headers.scss
+++ b/src/Components/Header/headers.scss
@@ -23,9 +23,10 @@
     align-items: center;
     .logo {
       animation: App-logo-spin infinite 20s linear;
-      height: 40px;
+      height: 32px;
       width: auto;
       display: inline-block;
+      margin-left: 10px;
       vertical-align: middle;
     }
   }
