--- a/src/Components/Listhotel/listhotel.scss
+++ b/src/Components/Listhotel/listhotel.scss
@@ -80,15 +80,19 @@
       }
     }
     &__title {
-      font-size: 16px;
-      font-weight: 400;
+      font-size: 20px;
+      font-weight: 300;
       text-transform: uppercase;
       text-shadow: 2px 2px 2px rgba(0,0,0,0.95);
     }
     &__text {
-      font-size: 24px;
-      font-weight: 400;
+      font-size: 18px;
+      font-weight: 300;
       text-transform: uppercase;
+      span {
+        display: inline-block;
+        color: #e8da57;
+      }
     }
     &__btn {
       height: 36px;
