--- a/src/Components/Listhotel/listhotel.css
+++ b/src/Components/Listhotel/listhotel.css
@@ -209,3 +209,135 @@
   height: 75px;
   background: url("../../img/location-icon.png") no-repeat center;
   background-size: cover; }
+
+.empty-block {
+  width: 100%;
+  height: 300px;
+  background: #fff;
+  text-align: center;
+  margin-top: 70px;
+  animation: opacity 4s 1 linear; }
+  .empty-block__text {
+    color: #000;
+    font-size: 50px;
+    position: relative;
+    width: 400px;
+    margin: 0 auto; }
+    .empty-block__text:after {
+      content: attr(data-text);
+      position: absolute;
+      left: 2px;
+      text-shadow: -1px 0 red;
+      top: 0;
+      color: black;
+      background: white;
+      overflow: hidden;
+      clip: rect(0, 450px, 0, 0);
+      animation: noise-anim 3s infinite linear alternate-reverse; }
+    .empty-block__text:before {
+      content: attr(data-text);
+      position: absolute;
+      left: -2px;
+      text-shadow: 1px 0 blue;
+      top: 0;
+      color: black;
+      background: white;
+      overflow: hidden;
+      clip: rect(0, 450px, 0, 0);
+      animation: noise-anim-2 3s infinite linear alternate-reverse; }
+
+@keyframes opacity {
+  0% {
+    opacity: 0; }
+  50% {
+    opacity: 0.2; }
+  100% {
+    opacity: 1; } }
+
+@keyframes noise-anim {
+  0% {
+    clip: rect(38px, 9999px, 6px, 0); }
+  5% {
+    clip: rect(4px, 9999px, 5px, 0); }
+  10% {
+    clip: rect(47px, 9999px, 3px, 0); }
+  15% {
+    clip: rect(8px, 9999px, 24px, 0); }
+  20% {
+    clip: rect(15px, 9999px, 21px, 0); }
+  25% {
+    clip: rect(12px, 9999px, 12px, 0); }
+  30% {
+    clip: rect(19px, 9999px, 49px, 0); }
+  35% {
+    clip: rect(4px, 9999px, 5px, 0); }
+  40% {
+    clip: rect(9px, 9999px, 49px, 0); }
+  45% {
+    clip: rect(49px, 9999px, 39px, 0); }
+  50% {
+    clip: rect(9px, 9999px, 36px, 0); }
+  55% {
+    clip: rect(27px, 9999px, 9px, 0); }
+  60% {
+    clip: rect(22px, 9999px, 38px, 0); }
+  65% {
+    clip: rect(44px, 9999px, 41px, 0); }
+  70% {
+    clip: rect(2px, 9999px, 17px, 0); }
+  75% {
+    clip: rect(18px, 9999px, 5px, 0); }
+  80% {
+    clip: rect(30px, 9999px, 20px, 0); }
+  85% {
+    clip: rect(20px, 9999px, 26px, 0); }
+  90% {
+    clip: rect(49px, 9999px, 43px, 0); }
+  95% {
+    clip: rect(46px, 9999px, 18px, 0); }
+  100% {
+    clip: rect(10px, 9999px, 49px, 0); } }
+
+@keyframes noise-anim-2 {
+  0% {
+    clip: rect(31px, 9999px, 41px, 0); }
+  5% {
+    clip: rect(36px, 9999px, 35px, 0); }
+  10% {
+    clip: rect(40px, 9999px, 32px, 0); }
+  15% {
+    clip: rect(43px, 9999px, 22px, 0); }
+  20% {
+    clip: rect(47px, 9999px, 28px, 0); }
+  25% {
+    clip: rect(40px, 9999px, 36px, 0); }
+  30% {
+    clip: rect(41px, 9999px, 28px, 0); }
+  35% {
+    clip: rect(35px, 9999px, 24px, 0); }
+  40% {
+    clip: rect(12px, 9999px, 37px, 0); }
+  45% {
+    clip: rect(7px, 9999px, 21px, 0); }
+  50% {
+    clip: rect(35px, 9999px, 18px, 0); }
+  55% {
+    clip: rect(32px, 9999px, 13px, 0); }
+  60% {
+    clip: rect(21px, 9999px, 17px, 0); }
+  65% {
+    clip: rect(16px, 9999px, 44px, 0); }
+  70% {
+    clip: rect(26px, 9999px, 30px, 0); }
+  75% {
+    clip: rect(3px, 9999px, 49px, 0); }
+  80% {
+    clip: rect(20px, 9999px, 26px, 0); }
+  85% {
+    clip: rect(12px, 9999px, 46px, 0); }
+  90% {
+    clip: rect(8px, 9999px, 46px, 0); }
+  95% {
+    clip: rect(39px, 9999px, 43px, 0); }
+  100% {
+    clip: rect(26px, 9999px, 16px, 0); } }
