--- a/src/Components/Listhotel/listhotel.scss
+++ b/src/Components/Listhotel/listhotel.scss
@@ -240,11 +240,71 @@
     }
   }
 }
-
 //map
 .google-icons {
   width: 50px;
   height: 75px;
   background: url('../../img/location-icon.png') no-repeat center;
   background-size: cover;
+}
+//empty block
+.empty-block {
+  width: 100%;
+  height: 300px;
+  background: #fff;
+  text-align: center;
+  margin-top: 70px;
+  animation:opacity 4s 1 linear;
+  &__text {
+    color: #000;
+    font-size: 50px;
+    position:relative;
+    width: 400px;
+    margin:0 auto;
+    &:after{
+      content:attr(data-text);
+      position:absolute;
+      left:2px;
+      text-shadow:-1px 0 red;
+      top:0;
+      color:black;
+      background:white;
+      overflow:hidden;
+      clip:rect(0,450px,0,0);
+      animation:noise-anim 3s infinite linear alternate-reverse;
+    }
+    &:before{
+      content:attr(data-text);
+      position:absolute;
+      left:-2px;
+      text-shadow:1px 0 blue;
+      top:0;
+      color:black;
+      background:white;
+      overflow:hidden;
+      clip:rect(0,450px,0,0);
+      animation:noise-anim-2 3s infinite linear alternate-reverse;
+    }
+  }
+}
+@keyframes opacity {
+  0%   { opacity: 0; }
+  50%   { opacity: 0.2; }
+  100% { opacity: 1; }
+}
+@keyframes noise-anim{
+  $steps:20;
+  @for $i from 0 through $steps{
+    #{percentage($i*(1/$steps))}{
+      clip:rect(random(50)+px,9999px,random(50)+px,0);
+    }
+  }
+}
+@keyframes noise-anim-2{
+  $steps:20;
+  @for $i from 0 through $steps{
+    #{percentage($i*(1/$steps))}{
+      clip:rect(random(50)+px,9999px,random(50)+px,0);
+    }
+  }
 }
